# Cognivex

./: .dockerignore  .gitignore  Agent.md  Dockerfile  README.md  WARP.md  app.py  app_1.py  arxiv.md  batch_run.py  docker-compose.yml  instruction.md  license.txt  main.py  preprocess.md  pyproject.toml  requirements.txt  structure.md  test.py
agents/: agent.py  prompt.py
agents/client/: agent_client.py  llm_client.py  neo4j_client.py
agents/core_process/: act_to_nii.py  attach_hook.py  choose_layer.py  inference.py  inspect_model.py  main.py  resample.py  visualize.py
agents/figure_explain/: main.py
agents/graph_rag/: main.py  neo_client.py  query.py  schema.py
agents/llm_client/: gemini_client.py  utils.py
agents/model_inspector/: handler.py  interface.py  logic.py
agents/nii_inference/: attach_hook.py  choose_layer.py  filter_layer.py  inference.py  main.py
app/: explain_graph.py  kg_query.py  main.py  nodes.py  schema.py
app/agents/: entity_linking.py  filtering.py  image_explainer.py  inference.py  knowledge_reasoning.py  postprocessing.py  report_generator.py  report_generator_1.py
app/graph/: state.py  workflow.py
app/services/: llm_provider.py  neo4j_connector.py  utils.py
backend/: backend_runner.py
deployment/: deploy.py  request.py  test.py
docs/: deploy.md  instruction.md
graphql/: alzheimers_kg_v1.graphml  edges.csv  nodes.csv  semantic_graph.graphml
hook/: activation_conv2.npy  activation_fc1.npy
model/: best_overall_model.pth  fold0_metrics.pt  fold1_metrics.pt  fold2_metrics.pt  fold3_metrics.pt  fold4_metrics.pt  mcadnnet_fold.pth  mcadnnet_mps.pth
model/macaddnet/: fold1_metrics.pt  fold4_metrics.pt
model/macadnnet/: ._fold4_metrics.pt  fold2_metrics.pt  mcadnnet_mps.pth  model.py
output/: activation_fc1_AD_AD_027_S_6648_task-rest_bold.nii_z001_t003.npy
output/macadnnet/: activation_conv2_AD_AD_027_S_6648_task-rest_bold.nii_z001_t003.npy  labels_fc1.npy
scripts/: build_label_npy.py  convert_image.py  data_filter.py  data_prepare.py  get_top_region.py  inference.py  model.py  model_info.py  populate_fake_nc.py  rename_nii.py  rollback.py  save_graph_fig.py  train.py  visualize_fc1.py
scripts/bna/: check_map.py  fullname.py  mapping.py  resample.py
scripts/capsnet/: act_nii.py  brain_map.py  build_kg.py  build_mock_kg.py  check_map.py  gif.py  infer.py  model.py  (+4 more)
tests/: analyze_vol_act.py  brain_region.py  capsnet_info.py  check_act.py  check_act_shape.py  check_sub14.py  check_time.py  find_t.py  gpt.py  image_explain.py  model_info.py  nii_check.py  nii_dim_check.py  ollama.py  prototype.py  region_network_map.py  test_app_integration.py  test_complete_pipeline.py  test_dynamic_filtering.py  test_nilearn_activation.py  update_map_csv.py  vertex.py  vertex_agent.py
tools/: generate_cypher.py  gradcam_utils.py
utils/: build_neo4j.py  hooks.py  semantic_utils.py
(+144 files in other folders)
